# aspida_robot

./: CMakeLists.txt  README.md  package.xml
launch/: multimaster_gazebo_aspida.launch  spawn_aspida.launch
rviz/: rb1_dual_ur3.rviz
urdf/gripper/: schunk.urdf.xacro
