<?xml version="1.0"?>
<package format="2">
  <name>aspida_robot</name>
  <version>0.0.0</version>
  <description>The aspida_robot package</description>

  <maintainer email="aioikono@pme.duth.gr">Katerina Oikonomou</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>imu_complementary_filter</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>moveit</build_depend>
  <build_depend>moveit</build_depend>
  <build_depend>teb_local_planner</build_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
